--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body {
 	font-family: 'Playfair Display';
 	xbackground-color: black;
 	color: #ffffff;
-	text-align: center;
+	xtext-align: center;
+	margin: auto;
 	font-size: 16px;
 background-image: url("https://c2.staticflickr.com/2/1615/24515922541_b37871eaf2_b.jpg");
 }
@@ -102,9 +103,6 @@ h1, h2, h3, h4 {
 
 }
 
-.circle {
-	border-radius: 50%;
-}
 
 p {
 	line-height: 34px;
