--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 body {
-	font-family: 'Playfair Display';
-	xbackground-color: black;
+font-family: 'Source Serif Pro', serif;
 	color: #ffffff;
-	text-align: center;
 	font-size: 16px;
 background-image: url("https://c2.staticflickr.com/2/1615/24515922541_b37871eaf2_b.jpg");
+}
+
+.sm {
+	font-size: 13px;
+}
+.food {
+	color: #FF4641;
 }
 
 a {
@@ -42,9 +47,9 @@ h1, h2, h3, h4 {
 }
 
 .intro {
+	font-family: helvetica;
 	font-size: 24px;
-	font-weight: 400;
-	padding: 10px 90px 10px 90px;
+	font-weight: 100;
 	line-height: 34px;
 	margin-bottom: 80px;
 	color: #ffffff;
@@ -113,3 +118,22 @@ p {
 .navbar-inverse .navbar-toggle {
 	background-color: black;
 }
+
+@media (max-width: 400px) {
+
+.row {
+	padding: 10%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.title {
+	font-size: 60px;
+}
+
+
+}
+
+
+
+
