--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ p {
 	background-color: black;
 }
 
-@media (max-width: 400px) {
+@media only screen and (min-width : 320px) {
 
 .row {
 	padding: 10%;
@@ -134,6 +134,7 @@ p {
 
 }
 
+    
 
 
 
