--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ p {
 	background-color: black;
 }
 
-@media only screen and (min-width : 320px) {
+@media only screen and (max-width : 320px) {
 
 .row {
 	padding: 10%;
